# xfce4-modifier-status-plugin

./: LICENSE  README.md  meson.build
src/: meson.build  properties-dialog.glade  xfce4-modifier-status-plugin.c  xfce4-modifier-status-plugin.desktop
